--- a/src/components/modalconfirm/DeviceAlert.css
+++ b/src/components/modalconfirm/DeviceAlert.css
@@ -18,7 +18,7 @@
 }
 .alertheading{
      color:white;
-     font-family: cursive;
+     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
      padding:0 20px;
      
 }
