--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -14,11 +14,14 @@
      width: 400px;
      color:white;
      border-radius: 30px;
-     background-color: rgba(0, 0, 0, 0.2);
+     background-color: rgb(57, 53, 97);
+     box-shadow: 1px 1px 10px white;
      font-family: cursive;
      font-size: 25px;
+     cursor:default;
 }
-.homeimage{
+/* .homeimage{
+     
      width:100%;
      height: 100vh;
-}
+} */
